--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -14,3 +14,6 @@ jobs:
       - uses: Readme-Workflows/recent-activity@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+permissions:
+  contents: write 
